--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,7 @@
+.login{
+    margin-left:5px;
+}
+
 button,
 input[type=submit] {
     background-color: #4CAF50;
